--- a/client/src/components/WorkersPage/WorkersEmployeePage/reportmodal.css
+++ b/client/src/components/WorkersPage/WorkersEmployeePage/reportmodal.css
@@ -1,5 +1,5 @@
 /* Modal Overlay and Content Styles */
-.modal-overlay {
+.modal-report-overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -8,7 +8,7 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.modal-content {
+.modal-report-content {
   position: absolute;
   top: 50%;
   left: 60%;
@@ -16,17 +16,19 @@
   background: white;
   padding: 20px;
   border-radius: 8px;
-  width: 80%;
-  max-width: 500px;
+  width: 100%;
+  max-width: 1200px;
   z-index: 1001;
 }
 
-.close-button {
+.close-report-button {
   background: none;
+  color: indigo;
+  font-weight: 600;
   border: none;
-  font-size: 24px;
+  font-size: 40px;
   cursor: pointer;
   position: absolute;
   top: 10px;
-  right: 10px;
+  right: 28px;
 }
